--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
     <title>JS-Game</title>
 </head>
@@ -17,14 +20,15 @@
             <button id="right">Derecha</button>
             <button id="down">Abajo</button>
         </section>
-    </section>
 
-    <section class="statics">
-        <p>Parrafo de ejemplo</p>
-    </section>
+        <section class="statics">
+            <p>Parrafo de ejemplo</p>
+        </section>
 
+    </section>
 
     <script src="./src/levels.js"></script>
     <script src="./src/game.js"></script>
+
 </body>
 </html>
