Se terminaron las funcionalidades para poder pasar de un nivel y para poder detectar las colisiones para cada una de las situaciones con el juego tanto para el total de vidas y luego para cada nivel

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </section>
 
         <section class="statics">
-            <p>Parrafo de ejemplo</p>
+            <p>Vidas: <span id="lives"></span></p>
         </section>
 
     </section>
