Sistema de tiempo de juego implementado

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
         <section class="statics">
             <p>Vidas: <span id="lives"></span></p>
+            <p>Tiempo:⏱️ <span id="timer"></span> sec.</p>
         </section>
 
     </section>
