Se implemento el sistema de records para que el juego sea mas adictivo y se estan haciendo mejoras en el codigo para detectar algunos errores con algunas pantallas del juego

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <section class="statics">
             <p>Vidas: <span id="lives"></span></p>
             <p>Tiempo:⏱️ <span id="timer"></span> sec.</p>
+            <p>Record: 🏁 <span id="record"></span>sec.</p>
+            <p id="info"></p>
         </section>
 
     </section>
